# AIdatasteward

./: .gitignore  README.md  databricks.yml  dq_pipeline_orgstrc.py  pyproject.toml
configs/: notifications.yaml
configs/endpoints/: customer_360.yaml
configs/kpis/: revenue.yaml
configs/products/: orgstrc.yaml
docs/: FUNNEL_2_0_LINEAGE.md  Funnel2.0.md  GUIDE.md  MONITORING.md  NOTIFICATIONS.md
dq_framework/: __init__.py  facade.py  run.py
dq_framework/core/: __init__.py  asserts.py  config.py  gating.py  messages.py  ops.py  results.py  routing.py
dq_framework/notify/: __init__.py  channels.py  dispatcher.py
dq_framework/spark/: __init__.py  endpoint.py  kpi.py  rowlevel.py  store.py
glossary/funnel_2_0/: README.md  funnel_groups.md  glossary.yaml  kpis.md  render_glossary.py  terms.md  views.md
notebooks/: example_pipeline_with_dq.py  funnel_2_0_kpi_layer_reconciliation.py
resources/: dq_jobs.yml
sql/: customer_journey_analysis.sql  ddl.sql  monitoring.sql
tests/: test_asserts.py  test_config.py  test_gating.py  test_glossary.py  test_messages.py  test_ops.py  test_results.py  test_routing.py
